--- a/Deals/Info.plist
+++ b/Deals/Info.plist
@@ -31,7 +31,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.59260456739-jobbufiv7t2hg8eha2i43hg9nut9emtq</string>
+				<string>com.googleusercontent.apps.1234567890-abcdefg</string>
 			</array>
 		</dict>
 	</array>
@@ -50,6 +50,14 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SF-Pro-Text-Medium.otf</string>
+		<string>SFCompactText-Regular.otf</string>
+		<string>SF-Pro-Text-Light.otf</string>
+		<string>SF-Pro-Text-Semibold.otf</string>
+		<string>SF-Pro-Text-Regular.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
