--- a/Deals/Info.plist
+++ b/Deals/Info.plist
@@ -50,7 +50,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
-	<string></string>
+	<string>1234</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
