--- a/Deals/Dollor Deals.entitlements
+++ b/Deals/Dollor Deals.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:dollordeals.com</string>
+		<string>applinks:www.dollordeals.com</string>
 	</array>
 </dict>
 </plist>
