--- a/Deals/Dollor Deals.entitlements
+++ b/Deals/Dollor Deals.entitlements
@@ -6,6 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
+		<string>applinks:godollardeals.com</string>
 		<string>applinks:www.godollardeals.com</string>
 	</array>
 </dict>
